// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogFooter with Button 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  width: 100%;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

@supports (-moz-appearance:none) {
  .c1 {
    gap: 0 1rem;
  }
}

@supports not (-moz-appearance:none) {
  .c1.c1 > * {
    margin-right: 1rem;
  }

  .c1.c1 > *:first-child {
    margin-right: 0rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.c1 > * {
    margin-right: 1rem;
  }

  .c1.c1 > *:first-child {
    margin-right: 0rem;
  }
}

<footer
  className="c0 "
  width="100%"
>
  <div
    className="c1"
    width="100%"
  >
    <button>
      Cancel
    </button>
  </div>
</footer>
`;

exports[`DialogFooter with DialogContext 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  width: 100%;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

@supports (-moz-appearance:none) {
  .c1 {
    gap: 0 1rem;
  }
}

@supports not (-moz-appearance:none) {
  .c1.c1 > * {
    margin-right: 1rem;
  }

  .c1.c1 > *:first-child {
    margin-right: 0rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.c1 > * {
    margin-right: 1rem;
  }

  .c1.c1 > *:first-child {
    margin-right: 0rem;
  }
}

<footer
  className="c0 "
  width="100%"
>
  <div
    className="c1"
    width="100%"
  >
    <button
      onClick={[Function]}
    >
      Cancel
    </button>
    <button
      onClick={[Function]}
    >
      Yes, Delete "Stuff"
    </button>
  </div>
</footer>
`;
